--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,7 +10,7 @@
           <div class="row_main row pb-5 mb-5">
             <div class="col-md-6">
               <div class="dev_top">
-                Web-разработка от команды Сергея Макаренко
+                Web-разработка от команды Makarenko Technology
               </div>
               <div class="main_title">
                 Разработка любого уровня сложности
@@ -19,7 +19,7 @@
               <div class="main_body"><img src="{% static 'img/main-arrow.svg' %}" alt=""> от простого лендинга</div>
               <div class="main_body"><img src="{% static 'img/main-arrow2.svg' %}" alt=""> до работ с AI</div>
               <div class="btn_top_wrap">
-                 <button class="btn btn_top">Начать работу с нами</button>
+                 <a href="#brief" class="btn btn_top">Начать работу с нами</a>
                  <div class="btn_top_bg"></div>
               </div>
             </div>
@@ -33,7 +33,7 @@
               </div>
               <div class="btn_top_wrap2">
                 <div>
-                  <button class="btn btn_top">Начать работу с нами</button>
+                  <a href="#brief" class="btn btn_top">Начать работу с нами</a>
                 </div>
 
                 <div class="btn_top_bg"></div>
@@ -489,60 +489,55 @@
                   <p>  Соответствие законодательным требованиям</p>
                 </div>
                 <div class="ind-text-tab" data-content="dollar-sign">
-                  <p>Интернет-продажи</p>
-                  <p>Расчеты страховых продуктов</p>
+                  <p>Онлайн-банкинг</p>
+                  <p>Личные кабинеты для B2B- и B2C-клиентов</p>
                   <p>Системы самообслуживания для B2B- и B2C-клиентов</p>
-                  <p> Системы дополнительных и перекрестных продаж</p>
+                  <p>Системы дополнительных и перекрестных продаж</p>
                   <p>Программы лояльности</p>
-                  <p>  Соответствие законодательным требованиям</p>
+                  <p>Продуктовые сайты</p>
                 </div>
                 <div class="ind-text-tab" data-content="shopping-cart">
-                  <p>Интернет-продажи</p>
-                  <p>Расчеты страховых продуктов</p>
-                  <p>Системы самообслуживания для B2B- и B2C-клиентов</p>
-                  <p> Системы дополнительных и перекрестных продаж</p>
-                  <p>Программы лояльности</p>
-                  <p>  Соответствие законодательным требованиям</p>
+                  <p>Промо-сайты и посадочные страницы</p>
+                  <p>Системы онлайн-продаж</p>
+                  <p>CRM-решения</p>
+                  <p>Продуктовые сайты</p>
+                  <p>Электронные торговые площадки и решения для поддержки экосистемы</p>
+                  <p>Порталы для дистрибьюторов</p>
                 </div>
                 <div class="ind-text-tab" data-content="shopping-bag">
-                  <p>Интернет-продажи</p>
-                  <p>Расчеты страховых продуктов</p>
-                  <p>Системы самообслуживания для B2B- и B2C-клиентов</p>
-                  <p> Системы дополнительных и перекрестных продаж</p>
+                  <p>Системы управления заказами</p>
+                  <p>Управление каталогом товаров</p>
+                  <p>Системы дополнительных и перекрестных продаж</p>
                   <p>Программы лояльности</p>
-                  <p>  Соответствие законодательным требованиям</p>
+                  <p>Анализ и настройка воронки продаж</p>
+                  <p>Системы повторных продаж</p>
                 </div>
                 <div class="ind-text-tab" data-content="activity">
-                  <p>Интернет-продажи</p>
-                  <p>Расчеты страховых продуктов</p>
-                  <p>Системы самообслуживания для B2B- и B2C-клиентов</p>
-                  <p>Системы дополнительных и перекрестных продаж</p>
-                  <p>Программы лояльности</p>
-                  <p>Соответствие законодательным требованиям</p>
+                  <p>Промо-сайты и «посадочные» страницы</p>
+                  <p>Системы онлайн-продаж</p>
+                  <p>CRM-решения</p>
+                  <p>Продуктовые сайты</p>
+                  <p>Порталы для врачей и медицинских организаций</p>
+                  <p>Порталы для дистрибьюторов</p>
                 </div>
                 <div class="ind-text-tab" data-content="smartphone">
-                  <p>Интернет-продажи</p>
-                  <p>Расчеты страховых продуктов</p>
+                  <p>Системы онлайн-продаж</p>
                   <p>Системы самообслуживания для B2B- и B2C-клиентов</p>
-                  <p>Системы дополнительных и перекрестных продаж</p>
-                  <p>Программы лояльности</p>
-                  <p>Соответствие законодательным требованиям</p>
+                  <p>Клиентские информационные системы</p>
+                  <p>Информационные решения для контакт-центров</p>
                 </div>
                 <div class="ind-text-tab" data-content="briefcase">
-                  <p>Интернет-продажи</p>
-                  <p>Расчеты страховых продуктов</p>
-                  <p>Системы самообслуживания для B2B- и B2C-клиентов</p>
-                  <p> Системы дополнительных и перекрестных продаж</p>
-                  <p>Программы лояльности</p>
-                  <p>  Соответствие законодательным требованиям</p>
+                  <p>Системы онлайн-продаж</p>
+                  <p>Электронные торговые площадки</p>
+                  <p>Цифровое преобразование бизнеса</p>
+                  <p>Сопровождение стартапа</p>
+                  <p>Консультации</p>
                 </div>
                 <div class="ind-text-tab" data-content="video">
-                  <p>Интернет-продажи</p>
-                  <p>Расчеты страховых продуктов</p>
-                  <p>Системы самообслуживания для B2B- и B2C-клиентов</p>
-                  <p>Системы дополнительных и перекрестных продаж</p>
-                  <p>Программы лояльности</p>
-                  <p>Соответствие законодательным требованиям</p>
+                  <p>Порталы СМИ</p>
+                  <p>Редакционные системы</p>
+                  <p>Площадки распространения информационных продуктов</p>
+                  <p>Автоматизыция (сервисы, боты)</p>
                 </div>
               </div>
             </div>
@@ -699,7 +694,6 @@
                   <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                     <div class="card-body">
                       Наш главный приоритет — помочь заказчику повысить эффективность бизнеса. Мы принимаем цели проектов как свои собственные и вместе с заказчиком создаем решение, которое наиболее точно соответствует его задачам.
-
                     </div>
                   </div>
                 </div>
@@ -713,8 +707,7 @@
                   </div>
                   <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                     <div class="card-body">
-                      Наш главный приоритет — помочь заказчику повысить эффективность бизнеса. Мы принимаем цели проектов как свои собственные и вместе с заказчиком создаем решение, которое наиболее точно соответствует его задачам.
-                    </div>
+                        Наша команда всегда готова идти навстречу заказчику и подстраиваться под его сроки реализации проекта. Разрабатываемый проект всегда делится на компактные этапы. Результатом каждого этапа становится реализация задач, имеющих наивысший приоритет. Именно поэтому даже самые сложные проекты команда реализует четко в срок.                     </div>
                   </div>
                 </div>
                 <div class="card" data-aos="fade-right"     data-aos-delay="250">
@@ -727,8 +720,7 @@
                   </div>
                   <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                     <div class="card-body">
-                      Наш главный приоритет — помочь заказчику повысить эффективность бизнеса. Мы принимаем цели проектов как свои собственные и вместе с заказчиком создаем решение, которое наиболее точно соответствует его задачам.
-                    </div>
+                        Прежде чем проектировать решение, мы изучаем доступные данные и строим прогнозные модели, опираясь на результаты статистических исследований. Разработка вероятных сценариев дает возможность выбрать тот вариант решения, который позволит заказчику достигнуть запланированных результатов.                     </div>
                   </div>
                 </div>
                 <div class="card" data-aos="fade-right"     data-aos-delay="350">
@@ -741,8 +733,7 @@
                   </div>
                   <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                     <div class="card-body">
-                      Наш главный приоритет — помочь заказчику повысить эффективность бизнеса. Мы принимаем цели проектов как свои собственные и вместе с заказчиком создаем решение, которое наиболее точно соответствует его задачам.
-                    </div>
+                        Адаптируя современные концепции взаимодействия к потребностям бизнеса, мы помогаем клиенту усовершенствовать как внутренние коммуникации, так и коммуникации бизнеса клиента с рынком. Наши заказчики добиваются и значительного повышения эффективности бизнеса.                    </div>
                   </div>
                 </div>
                 <div class="card" data-aos="fade-right"     data-aos-delay="450">
@@ -755,8 +746,7 @@
                   </div>
                   <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                     <div class="card-body">
-                      Наш главный приоритет — помочь заказчику повысить эффективность бизнеса. Мы принимаем цели проектов как свои собственные и вместе с заказчиком создаем решение, которое наиболее точно соответствует его задачам.
-                    </div>
+                        Выбирая платформы для разработки решений, мы используем широкий спектр инновационных технологий, надежность которых неоднократно подтверждена практикой. Каждый рекомендуемый нами компонент наилучшим образом соответствует поставленной задаче и обеспечивает максимальную эффективность.                     </div>
                   </div>
                 </div>
               </div>
