--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
           <div class="col-md-12">
             <nav class="navbar navbar-expand-lg navbar-light">
               <div class="navbar_wrap">
-                <a class="navbar-brand" href="#"></a>
+                <a class="navbar-brand" href="#main">
                   <svg
                     width="38"
                     height="30"
