--- a/beautiful_slovenia/templates/beautiful_slovenia/index.html
+++ b/beautiful_slovenia/templates/beautiful_slovenia/index.html
@@ -30,7 +30,7 @@
 
 			<div class="frame frame_bg">
 				<div class="frame__content">
-					<video class="frame-media frame-media_right" src="{% static 'media_slovenia/video_optimized.mp4' %}" autoplay loop muted></video>
+					<video class="frame-media frame-media_right" src="{% static 'media_slovenia/video_optimized.mp4' %}"></video>
 				</div>
 			</div>
 
