--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -580,13 +580,14 @@
                                                         {{ project.name }}
                                                     </div>
                                                     <div class="keys_list_item_text">
-                                                       {{ project.description|truncatechars:100 }}
+                                                        {{ project.description|truncatechars:100 }}
                                                     </div>
                                                 </div>
                                                 <div>
                                                     <button class="keys_list_item_btn">Смотреть <img
                                                             style="display: inline-block;"
-                                                            src="{% static 'img/akar-icons_arrow-up-right.svg' %}" alt=""/>
+                                                            src="{% static 'img/akar-icons_arrow-up-right.svg' %}"
+                                                            alt=""/>
                                                     </button>
                                                 </div>
                                             </div>
@@ -885,7 +886,8 @@
                         <div id="tags">
                             <ul class="technology_list">
                                 <li class="technology_list_item">
-                                    <a class="brief_quiz_btn brief_quiz_btn-prev" data-content-index="0" data-content="frontend">РАЗРАБОТКА КЛИЕНТСКИХ СИСТЕМ</a>
+                                    <a class="brief_quiz_btn brief_quiz_btn-prev" data-content-index="0"
+                                       data-content="frontend">РАЗРАБОТКА КЛИЕНТСКИХ СИСТЕМ</a>
                                 </li>
                                 <li class="technology_list_item">
                                     <a data-content-index="1" data-content="mobile">МОБИЛЬНАЯ РАЗРАБОТКА</a>
@@ -1019,8 +1021,9 @@
                                             data-value="Электронная коммерция">
                                             <img src="{% static 'img/quiz-shopping-bag.svg' %}" alt=""/>
                                             <div class="quiz_list_item_name">Электронная коммерция</div>
-                                            <div class="breif_left_icon"><img
-                                                    src="{% static 'img/arrow-down-circle.svg' %}" alt=""></div>
+                                            <div class="breif_left_icon">
+                                                <img src="{% static 'img/arrow-down-circle.svg' %}" alt="">
+                                            </div>
                                         </li>
                                         <li class="quiz_list_item" data-quiz="0" data-prop="projectType"
                                             data-value="Обслуживание клиентов">
@@ -1040,15 +1043,17 @@
                                             data-value="Big Data">
                                             <img src="{% static 'img/quiz-database.svg' %}" alt="">
                                             <div class="quiz_list_item_name">Big Data</div>
-                                            <div class="breif_left_icon"><img
-                                                    src="{% static 'img/arrow-down-circle.svg' %}" alt=""></div>
+                                            <div class="breif_left_icon">
+                                                <img src="{% static 'img/arrow-down-circle.svg' %}" alt="">
+                                            </div>
                                         </li>
                                         <li class="quiz_list_item" data-quiz="0" data-prop="projectType"
                                             data-value="Другое">
                                             <img src="{% static 'img/quiz-more-horizontal.svg' %}" alt="">
                                             <div class="quiz_list_item_name">Другое</div>
-                                            <div class="breif_left_icon"><img
-                                                    src="{% static 'img/arrow-down-circle.svg' %}" alt=""></div>
+                                            <div class="breif_left_icon">
+                                                <img src="{% static 'img/arrow-down-circle.svg' %}" alt="">
+                                            </div>
                                         </li>
                                     </ul>
                                 </div>
@@ -1060,25 +1065,23 @@
                                         <li class="quiz_list_item" data-active="false" data-quiz="1"
                                             data-prop="projectPlatform" data-value="Адаптивный сайт">
                                             <img src="{% static 'img/quiz-monitor.svg' %}" alt=""/>
-                                            <div class="quiz_list_item_name">Адаптивный
-                                                сайт
+                                            <div class="quiz_list_item_name">Адаптивный сайт</div>
+                                            <div class="breif_left_icon">
+                                                <img src="{% static 'img/arrow-down-circle.svg' %}" alt="">
                                             </div>
-                                            <div class="breif_left_icon"><img
-                                                    src="{% static 'img/arrow-down-circle.svg' %}" alt=""></div>
                                         </li>
                                         <li class="quiz_list_item" data-active="false" data-quiz="1"
                                             data-prop="projectPlatform" data-value="Мобильное приложение">
                                             <img src="{% static 'img/quiz-smartphone.svg' %}" alt="">
                                             <div class="quiz_list_item_name">Мобильное приложение</div>
-                                            <div class="breif_left_icon"><img
-                                                    src="{% static 'img/arrow-down-circle.svg' %}" alt=""></div>
+                                            <div class="breif_left_icon">
+                                                <img src="{% static 'img/arrow-down-circle.svg' %}" alt="">
+                                            </div>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="quiz_content quiz_content-mt67">
-                                    <div class="quiz_content_title">
-                                        В каком состоянии ваш проект сейчас?
-                                    </div>
+                                    <div class="quiz_content_title">В каком состоянии ваш проект сейчас?</div>
                                     <ul class="quiz_list">
                                         <li class="quiz_list_item" data-quiz="2" data-prop="projectState"
                                             data-value="Новый проект">
@@ -1090,12 +1093,12 @@
                                         <li class="quiz_list_item" data-quiz="2" data-prop="projectState"
                                             data-value="Существующий проект">
                                             <img src="{% static 'img/quiz-clipboard-2.svg' %}" alt="">
-                                            <div class="quiz_list_item_name">Существующий
-                                                проект
+                                            <div class="quiz_list_item_name">Существующий проект</div>
+                                            <div class="breif_left_icon">
+                                                <img src="{% static 'img/arrow-down-circle.svg' %}" alt="">
                                             </div>
-                                            <div class="breif_left_icon"><img
-                                                    src="{% static 'img/arrow-down-circle.svg' %}" alt=""></div>
                                         </li>
+                                    <ul/>
                                 </div>
                                 <div class="quiz_content quiz_content-mt67">
                                     <div class="quiz_content_title">
@@ -1130,7 +1133,8 @@
                                     </ul>
                                 </div>
                                 <div class="quiz_content">
-                                    <form class="quiz_form">
+                                    <form action="" method="POST" class="quiz_form">
+                                        <input type="hidden" value="{{ csrf_token }}" id="csrf">
                                         <div class="form-group">
                                             <div class="input_group">
                                                 <label for="username">Имя</label>
@@ -1138,8 +1142,8 @@
                                                        class="quiz_form_input"/>
                                             </div>
                                             <div class="input_group">
-                                                <label for="phone">Телефон</label>
-                                                <input type="tel" name="phone" placeholder="+7" id="phone"
+                                                <label for="phone">Телефон без +7</label>
+                                                <input type="text" name="phone" id="phone"
                                                        class="quiz_form_input"/>
                                             </div>
                                             <div class="input_group">
